setting up pages

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  margin: 0 20%;
 }
 
 .App-logo {
@@ -30,4 +31,17 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.sticky-top {
+  background-color: white;
+  top: -1px;
+}
+
+.icon {
+  cursor: pointer
+}
+
+.clicked {
+  opacity: .2;
 }
