--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
 .App {
   text-align: center;
-  margin: 0 20%;
+  /* margin: 0 20%; */
 }
- 
+
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
